// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConnectionTest/> Snapshot after trigger DNS connection test. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          DNS
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          DNSSEC
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      disabled=""
      type="submit"
    >
      <span
        aria-hidden="true"
        class="spinner-border spinner-border-sm me-1"
        role="status"
      />
      <span>
        Test is running…
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshot after trigger Overview connection test. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          DNS
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          DNSSEC
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="d-grid"
  >
    <button
      class="btn btn-outline-primary w-auto col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      disabled=""
      type="submit"
    >
      <span
        aria-hidden="true"
        class="spinner-border spinner-border-sm me-1"
        role="status"
      />
      <span>
        Test is running…
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshot after trigger WAN connection test. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <div
            class="spinner-border spinner-border-sm text-secondary"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      disabled=""
      type="submit"
    >
      <span
        aria-hidden="true"
        class="spinner-border spinner-border-sm me-1"
        role="status"
      />
      <span>
        Test is running…
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshot before connection test. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-secondary"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-secondary"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-secondary"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-secondary"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      type="submit"
    >
      <span>
        Test connection
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshots with failed connection test results. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-danger"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-danger"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-danger"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-danger"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      type="submit"
    >
      <span>
        Test connection again
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshots with successful connection test results. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-success"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-success"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-success"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-success"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      type="submit"
    >
      <span>
        Test connection again
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ConnectionTest/> Snapshots with unknown connection test results. 1`] = `
<DocumentFragment>
  <table
    class="table table-borderless table-hover col-sm-12"
  >
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IPv4 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-warning"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv4 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-warning"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-warning"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          IPv6 gateway connectivity
        </th>
        <td
          class="text-end"
        >
          <span
            class="text-warning"
          >
            <i
              class="fa"
            />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="text-end"
  >
    <button
      class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
      type="submit"
    >
      <span>
        Test connection again
      </span>
    </button>
  </div>
</DocumentFragment>
`;
